# monadic-parser-combinator

./: .clang-format  .gitattributes  CMakeLists.txt  Doxyfile  LICENSE  README.md  make_single_header.py  mpc.hpp
.github/workflows/: gen-docs.yml  gen_docs.yml  linux-build-release.yml  linux-build.yml  macos-build.yml  single-header.yml
docs/: alternative_8hpp.html  alternative_8hpp.js  alternative_8hpp_source.html  alternative__value__t_8hpp.html  alternative__value__t_8hpp.js  alternative__value__t_8hpp_source.html  annotated.html  annotated_dup.js  applicative_8hpp.html  applicative_8hpp.js  applicative_8hpp_source.html  char_8hpp.html  char_8hpp.js  char_8hpp_source.html  classes.html  classmpc_1_1copyable__box-members.html  classmpc_1_1copyable__box.html  classmpc_1_1copyable__box.js  classmpc_1_1copyable__box_3_01_t_01_4-members.html  classmpc_1_1copyable__box_3_01_t_01_4.html  classmpc_1_1copyable__box_3_01_t_01_4.js  compose_8hpp.html  compose_8hpp.js  compose_8hpp_source.html  conceptmpc_1_1alternative.html  conceptmpc_1_1alternative__traits__specialized.html  conceptmpc_1_1applicative.html  conceptmpc_1_1applicative__traits__specialized.html  conceptmpc_1_1copy__constructible__object.html  conceptmpc_1_1detail_1_1has__alternative__traits__combine.html  conceptmpc_1_1detail_1_1has__alternative__traits__empty.html  conceptmpc_1_1functor.html  conceptmpc_1_1monad.html  conceptmpc_1_1monad__traits__specialized.html  conceptmpc_1_1tuple__like.html  concepts.html  concepts.js  constant_8hpp.html  constant_8hpp.js  constant_8hpp_source.html  (+703 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+56 more)
draft/: StateT.md  action_items.md  control.md  foldable.hs  foldable.md  stateT.md  stl_module.md
draft/20211022/: compose.hpp  range_adaptor_closure.hpp
draft/20211027/: applicative.hpp  basic_traits.hpp  functor.hpp  monad.hpp
draft/20220924/: function.hpp
draft/control/: alternative.md  applicative.md  functor.md  monad.md
examples/: draft.cpp  draft2.cpp  draft3.cpp  example.cpp  examples.md  maybe.cpp  maybefundamental.hpp  quick_example.cpp
include/: CMakeLists.txt
include/mpc/: control.hpp  data.hpp  functional.hpp  mpc.hpp  parser.hpp  prelude.hpp  ranges.hpp  stdfundamental.hpp  type_traits.hpp  utility.hpp
include/mpc/control/: alternative.hpp  applicative.hpp  basic_traits.hpp  functor.hpp  holding.hpp  monad.hpp  state.hpp  trans.hpp
include/mpc/control/state/: class.hpp  state.hpp  stateT.hpp
include/mpc/control/trans/: class.hpp  state.hpp
include/mpc/data/: char.hpp  either.hpp  functor.hpp  identity.hpp  list.hpp  maybe.hpp  stateT.hpp  tagged_union.hpp
include/mpc/data/functor/: identity.hpp
include/mpc/functional/: bind_back.hpp  constant.hpp  flip.hpp  function.hpp  infix.hpp  partial.hpp  perfect_forward.hpp
include/mpc/prelude/: compose.hpp  constant.hpp  flip.hpp  fst.hpp  id.hpp  identity.hpp  infix.hpp  operations.hpp  unit.hpp
include/mpc/utility/: alternative_value_t.hpp  copyable_box.hpp  forward_like.hpp  nil.hpp  overloaded.hpp  single.hpp  tuple_like.hpp
tests/: CMakeLists.txt  stdfundamental.hpp
tests/control/: CMakeLists.txt  control.cpp
tests/control/trans/: CMakeLists.txt  control_trans.cpp
tests/data/: CMakeLists.txt  data.cpp
tests/draft/: CMakeLists.txt  draft.cpp
tests/functional/: CMakeLists.txt  functional.cpp
tests/parser/: CMakeLists.txt  parser.cpp
tests/prelude/: CMakeLists.txt  prelude.cpp
tests/type_traits/: CMakeLists.txt  type_traits.cpp
tests/utility/: CMakeLists.txt  utility.cpp
